sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/ContinueStatement.sand
pub class ContinueStatement {
    foo() {
        continue;
    }
}