sandc/test/fixtures/astRegression/shouldFail/productions/statement/ThrowWithoutValue.sand
pub class ThrowWithoutValue {
    foo() {
        throw;
    }
}